--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bike Traffic in Boston
-    </title>
+    <link rel="stylesheet" href="global.css" />
+    <link rel="mappage" href="map.css" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+    <title>Bike Traffic in Boston</title>
+    <!-- Mapbox GL JS CSS -->
+    <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+    rel="stylesheet"
+    />
+    <script src="map.js" type="module"></script>
 </head>
 <body>
     <h1>Bike Traffic in Boston</h1>
 </body>
+<div id="map"></div>
 </html>
