--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="global.css" />
-    <link rel="mappage" href="map.css" />
+    <link rel="stylesheet" href="map.css" />
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
     <title>Bike Traffic in Boston</title>
     <!-- Mapbox GL JS CSS -->
