--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 <body>
     <h1>Bike Traffic in Boston</h1>
-    <div id="map"></div>
+    <div id="map">
+        <svg></svg>
+    </div>
 </body>
 </html>
